src/test/deca/context/valid/ContextSansObjet/Identification/IdentificationBool.deca
//Description :
//	identification de variables booléennes et affectations de valeurs
//
//Résultats :
//	ok 


{
    boolean x = true;
    boolean y = true;
    boolean z = false;
}