src/test/deca/context/invalid/ContextSansObjet/OperationsArithmetiques/MultiplyBool.deca
//Description :
//	Vérification contextuelle de l'opérateur + avec des variables boolean
//
//Résultats :
//	ligne 8 : les opérateurs doivent ètre de type numérique (int ou float)
{
    boolean x = true;
    boolean y = true * 3;
    boolean z = true * false;
    y = x*y;
}